[gd_scene load_steps=6 format=3 uid="uid://cpwt7v4n1nwdq"]

[ext_resource type="Script" path="res://scenes/math_minigame.gd" id="1_q5oua"]
[ext_resource type="Texture2D" uid="uid://bc5kgnu7bql5u" path="res://Scenes/tick_image.png" id="2_a028q"]
[ext_resource type="Texture2D" uid="uid://deyfr0yio4gsp" path="res://Scenes/cross_image.png" id="3_0qbn2"]

[sub_resource type="Gradient" id="Gradient_q5oua"]
offsets = PackedFloat32Array(0, 0.07333332)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qyy11"]
gradient = SubResource("Gradient_q5oua")

[node name="MathMinigame" type="Node2D"]
script = ExtResource("1_q5oua")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(583, 277.00003)
scale = Vector2(6.2304688, 911.5)
texture = SubResource("GradientTexture1D_qyy11")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -184.5
offset_right = 184.5
offset_bottom = 69.0
grow_horizontal = 2
scale = Vector2(1, 0.96)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 100
text = "Math Problems"
metadata/_edit_use_anchors_ = true

[node name="PlusSign" type="Label" parent="."]
offset_left = 195.99997
offset_top = 247.99998
offset_right = 235.99997
offset_bottom = 344.0
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 70
text = "+"

[node name="MinusSign" type="Label" parent="."]
offset_left = 195.99997
offset_top = 408.0
offset_right = 225.99997
offset_bottom = 504.0
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 70
text = "_"

[node name="TimesSign" type="Label" parent="."]
offset_left = 772.0
offset_top = 247.99998
offset_right = 812.0
offset_bottom = 344.0
theme_override_font_sizes/font_size = 62
text = "x"

[node name="DivideSign" type="Label" parent="."]
offset_left = 780.0
offset_top = 440.0
offset_right = 838.0
offset_bottom = 536.0
theme_override_font_sizes/font_size = 70
text = "รท"

[node name="EqualsPlus" type="Label" parent="."]
offset_left = 322.0
offset_top = 247.0
offset_right = 362.0
offset_bottom = 343.0
theme_override_font_sizes/font_size = 70
text = "="

[node name="EqualsTimes" type="Label" parent="."]
offset_left = 897.0
offset_top = 250.00002
offset_right = 937.0
offset_bottom = 346.0
theme_override_font_sizes/font_size = 70
text = "="

[node name="EqualsMinus" type="Label" parent="."]
offset_left = 321.0
offset_top = 441.0
offset_right = 361.0
offset_bottom = 537.0
theme_override_font_sizes/font_size = 70
text = "="

[node name="EqualsDivide" type="Label" parent="."]
offset_left = 897.0
offset_top = 438.0
offset_right = 937.0
offset_bottom = 534.0
theme_override_font_sizes/font_size = 70
text = "="

[node name="PlusNum1" type="Label" parent="."]
offset_left = 128.0
offset_top = 252.0
offset_right = 168.0
offset_bottom = 348.0
theme_override_font_sizes/font_size = 60
text = "0"

[node name="PlusNum2" type="Label" parent="."]
offset_left = 257.0
offset_top = 252.0
offset_right = 297.0
offset_bottom = 335.0
theme_override_font_sizes/font_size = 60
text = "0"

[node name="MinusNum1" type="Label" parent="."]
offset_left = 129.0
offset_top = 443.0
offset_right = 169.0
offset_bottom = 526.0
theme_override_font_sizes/font_size = 60
text = "0"

[node name="MinusNum2" type="Label" parent="."]
offset_left = 256.0
offset_top = 443.0
offset_right = 296.0
offset_bottom = 526.0
theme_override_font_sizes/font_size = 60
text = "0"

[node name="TimesNum1" type="Label" parent="."]
offset_left = 706.0
offset_top = 253.00002
offset_right = 746.0
offset_bottom = 336.0
theme_override_font_sizes/font_size = 60
text = "0"

[node name="TimesNum2" type="Label" parent="."]
offset_left = 834.0
offset_top = 253.00002
offset_right = 874.0
offset_bottom = 336.0
theme_override_font_sizes/font_size = 60
text = "0"

[node name="DivideNum1" type="Label" parent="."]
offset_left = 680.0
offset_top = 444.0
offset_right = 720.0
offset_bottom = 527.0
theme_override_font_sizes/font_size = 60
text = "0"

[node name="DivideNum2" type="Label" parent="."]
offset_left = 833.0
offset_top = 444.0
offset_right = 873.0
offset_bottom = 527.0
theme_override_font_sizes/font_size = 60
text = "0"

[node name="PlusInput" type="TextEdit" parent="."]
offset_left = 384.0
offset_top = 256.0
offset_right = 448.0
offset_bottom = 320.0
theme_override_font_sizes/font_size = 44
placeholder_text = "?"

[node name="MinusInput" type="TextEdit" parent="."]
offset_left = 384.0
offset_top = 448.0
offset_right = 448.0
offset_bottom = 512.0
theme_override_font_sizes/font_size = 44
placeholder_text = "?"

[node name="TimesInput" type="TextEdit" parent="."]
offset_left = 961.0
offset_top = 256.0
offset_right = 1025.0
offset_bottom = 320.0
theme_override_font_sizes/font_size = 44
placeholder_text = "?"

[node name="DivideInput" type="TextEdit" parent="."]
offset_left = 961.0
offset_top = 449.0
offset_right = 1025.0
offset_bottom = 513.0
theme_override_font_sizes/font_size = 44
placeholder_text = "?"

[node name="PlusTick" type="TextureRect" parent="."]
visible = false
offset_left = 461.0
offset_top = 260.0
offset_right = 525.0
offset_bottom = 320.0
texture = ExtResource("2_a028q")
expand_mode = 1

[node name="MinusTick" type="TextureRect" parent="."]
visible = false
offset_left = 461.0
offset_top = 453.0
offset_right = 525.0
offset_bottom = 513.0
texture = ExtResource("2_a028q")
expand_mode = 1

[node name="DivideTick" type="TextureRect" parent="."]
visible = false
offset_left = 1039.0
offset_top = 453.0
offset_right = 1103.0
offset_bottom = 513.0
texture = ExtResource("2_a028q")
expand_mode = 1

[node name="TimesTick" type="TextureRect" parent="."]
visible = false
offset_left = 1039.0
offset_top = 259.0
offset_right = 1103.0
offset_bottom = 319.0
texture = ExtResource("2_a028q")
expand_mode = 1

[node name="PlusCross" type="TextureRect" parent="."]
visible = false
offset_left = 456.0
offset_top = 259.0
offset_right = 536.0
offset_bottom = 319.0
texture = ExtResource("3_0qbn2")
expand_mode = 1

[node name="TimesCross" type="TextureRect" parent="."]
visible = false
offset_left = 1034.0
offset_top = 259.0
offset_right = 1114.0
offset_bottom = 319.0
texture = ExtResource("3_0qbn2")
expand_mode = 1

[node name="DivideCross" type="TextureRect" parent="."]
visible = false
offset_left = 1034.0
offset_top = 454.0
offset_right = 1114.0
offset_bottom = 514.0
texture = ExtResource("3_0qbn2")
expand_mode = 1

[node name="MinusCross" type="TextureRect" parent="."]
visible = false
offset_left = 456.0
offset_top = 453.0
offset_right = 536.0
offset_bottom = 513.0
texture = ExtResource("3_0qbn2")
expand_mode = 1

[connection signal="text_changed" from="PlusInput" to="." method="_on_plus_input_text_changed"]
[connection signal="text_changed" from="MinusInput" to="." method="_on_minus_input_text_changed"]
[connection signal="text_changed" from="TimesInput" to="." method="_on_times_input_text_changed"]
[connection signal="text_changed" from="DivideInput" to="." method="_on_divide_input_text_changed"]
